# mkcheck

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  fuzz_test.py  graph.py  plot.py  save_time.py
fuzz_test/: __main__.py  graph.py
java/trace/: __main__.py
mkcheck/: fd.cpp  fd.h  mkcheck.cpp  proc.cpp  proc.h  syscall.cpp  syscall.h  trace.cpp  trace.h  util.cpp  util.h
test/make/: Makefile  a.c  a.h  b.c  b.h  c.c  c.h  main  main.c
test/make/lib_a/: lib_a.c  lib_a.h
test/make/lib_b/: lib_b.c  lib_b.h
test/parallel/: Makefile  a.in  b.in  c.in  main.cpp
tools/: monitor_changes.py
tools/fuzz_test/: __main__.py  graph.py  mtime.py  parser.py  proc.py
tools/make/: Main.hs  Makefile.hs  Parser.hs  make.sh
tools/viewer/: package-lock.json  package.json  webpack.config.js
tools/viewer/src/: index.jsx  tree.js
tools/viewer/src/components/: TreeNode.jsx  TreeView.jsx
